--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/L.Control.Locate.min.js",
   "unpkg": "dist/L.Control.Locate.min.js",
   "jsdelivr": "dist/L.Control.Locate.min.js",
-  "module": "src/L.Control.Locate.js",
+  "module": "dist/L.Control.Locate.esm.min.js",
   "author": "Dominik Moritz <domoritz@gmail.com>",
   "repository": {
     "type": "git",
@@ -28,15 +28,20 @@
     "start": "grunt connect"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "grunt": "^1.6.1",
     "grunt-bump": "0.8.0",
     "grunt-contrib-connect": "^4.0.0",
-    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.2.2",
+    "grunt-rollup": "^12.0.0",
+    "grunt-sass": "^3.1.0",
+    "leaflet": "^1.9.4",
     "prettier": "^3.2.5",
+    "rollup": "^4.24.0",
     "sass": "^1.77.2",
     "stylelint": "^16.6.0",
     "stylelint-config-prettier-scss": "^1.0.0",
